# fiscal_tone

./: .gitignore  CLAUDE.md  CLEANING_SUMMARY.md  COW_Paper.tex  COW_Paper_reviewed.tex  EXTRACTION_IMPROVEMENTS.md  FINAL_CLEANING_RESULTS.md  FOOTER_DETECTION_FINAL_REPORT.md  FOOTER_DETECTION_SUMMARY.md  INCREMENTAL_CLEANING_GUIDE.md  OLD_REFEREE_REPORT.md  OPTIMIZATION_COMPARISON.md  PARAGRAPH_DETECTION_STRATEGIES.md  README.md  REFEREE_REPORT.md  RESULTS_SUMMARY.md  REVISION_SUMMARY.md  ROBUST_FOOTER_STRATEGY.md  SCANNED_PDF_EXTRACTION_PLAN.md  STAGE_RENAMING_SUMMARY.md  TESSERACT_SETUP.md  TEXT_CLEANING_PLAN.md  TEXT_CLEANING_USAGE.md  _ul  advanced_footer_detector.py  analyze_cf_corpus.py  analyze_cleaning_patterns.py  analyze_footer_lines.py  analyze_footnote_patterns.py  backup_fiscal_risk_20250711_102848.csv  backup_fiscal_risk_20250711_105500.csv  backup_fiscal_risk_20250711_105519.csv  backup_fiscal_risk_20250711_105538.csv  backup_fiscal_risk_20250711_105555.csv  backup_fiscal_risk_20250711_105612.csv  backup_fiscal_risk_20250711_105631.csv  backup_fiscal_risk_20250711_105648.csv  backup_fiscal_risk_20250711_105707.csv  backup_fiscal_risk_20250711_105727.csv  backup_fiscal_risk_20250711_105744.csv  (+164 more)
.ipynb_checkpoints/: cf_sentiment_analysis-checkpoint.ipynb  llm-checkpoint.ipynb  metas-checkpoint.ipynb  text_preprocessing-checkpoint.ipynb
cleaned_text/: INFORME_N_001-2017-CF_page01_cleaned.txt  INFORME_N_001-2017-CF_page02_cleaned.txt  INFORME_N_001-2017-CF_page03_cleaned.txt  INFORME_N_001-2017-CF_page04_cleaned.txt  INFORME_N_001-2017-CF_page05_cleaned.txt  INFORME_N_002-2017-CF_page01_cleaned.txt  INFORME_N_002-2017-CF_page02_cleaned.txt  INFORME_N_002-2017-CF_page03_cleaned.txt  INFORME_N_002-2017-CF_page04_cleaned.txt  INFORME_N_002-2017-CF_page05_cleaned.txt  INFORME_N_002-2017-CF_page06_cleaned.txt  INFORME_N_002-2017-CF_page07_cleaned.txt  INFORME_N_003-2017-CF_page01_cleaned.txt  INFORME_N_003-2017-CF_page02_cleaned.txt  INFORME_N_003-2017-CF_page03_cleaned.txt  INFORME_N_003-2017-CF_page04_cleaned.txt  INFORME_N_003-2017-CF_page05_cleaned.txt  INFORME_N_003-2017-CF_page06_cleaned.txt  INFORME_N_003-2017-CF_page07_cleaned.txt  INFORME_N_003-2017-CF_page08_cleaned.txt  INFORME_N_003-2017-CF_page09_cleaned.txt  INFORME_N_003-2017-CF_page10_cleaned.txt  INFORME_N_004-2017-CF_page01_cleaned.txt  INFORME_N_004-2017-CF_page02_cleaned.txt  INFORME_N_004-2017-CF_page03_cleaned.txt  INFORME_N_004-2017-CF_page04_cleaned.txt  INFORME_N_004-2017-CF_page05_cleaned.txt  INFORME_N_004-2017-CF_page06_cleaned.txt  INFORME_N_004-2017-CF_page07_cleaned.txt  INFORME_N_004-2017-CF_page08_cleaned.txt  Informe-NÂ°-001-2018-CF_page01_cleaned.txt  Informe-NÂ°-001-2018-CF_page03_cleaned.txt  Informe-NÂ°-001-2018-CF_page04_cleaned.txt  Informe-NÂ°-001-2018-CF_page05_cleaned.txt  Informe-NÂ°-001-2018-CF_page06_cleaned.txt  Informe-NÂ°-001-2018-CF_page08_cleaned.txt  Informe-NÂ°-001-2018-CF_page09_cleaned.txt  Informe-NÂ°-001-2018-CF_page10_cleaned.txt  Informe-NÂ°-001-2018-CF_page11_cleaned.txt  Informe-NÂ°-001-2018-CF_page12_cleaned.txt  (+45 more)
config/: config.example.yaml
dashboard/: package-lock.json  package.json
data_visualization/: agenda_1.R  agenda_3.R  fiscal_indicators.xlsx
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_AVAILABILITY.md  DATA_DICTIONARY.md  INSTALLATION.md  METHODOLOGY.md  USAGE.md
extracted_text/: INFORME_N_001-2017-CF_page01.txt  INFORME_N_001-2017-CF_page02.txt  INFORME_N_001-2017-CF_page05.txt  (+70 more)
(+89 files in other folders)
