# FiscalTone - Project Configuration
# https://peps.python.org/pep-0621/

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fiscal-tone"
version = "1.0.0"
description = "Fiscal Policy Sentiment Analysis for Peru's Fiscal Council"
readme = "README.md"
authors = [
    {name = "Jason Cruz", email = "jj.cruza@up.edu.pe"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "fiscal policy",
    "sentiment analysis",
    "NLP",
    "LLM",
    "Peru",
    "Fiscal Council",
    "text classification",
    "GPT-4"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "aiolimiter>=1.1.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/JasonCruz18/FiscalTone"
Documentation = "https://github.com/JasonCruz18/FiscalTone/tree/main/docs"
Repository = "https://github.com/JasonCruz18/FiscalTone"
Issues = "https://github.com/JasonCruz18/FiscalTone/issues"

[project.scripts]
fiscal-tone = "scripts.run_pipeline:main"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["fiscal_tone*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.eggs
    | build
    | dist
    | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["fiscal_tone"]
skip = [".git", ".venv", "__pycache__", "archive"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["archive/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["fiscal_tone"]
omit = ["*/tests/*", "*/__pycache__/*", "*/archive/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
